fix logged tag note alignment

--- a/style.css
+++ b/style.css
@@ -313,6 +313,7 @@ details p {
   margin-top: 10px;
   color: #cfcfcf;
   line-height: 1.5;
+  text-align: left;
 }
 
 /* RESPONSIVE */
